Updated to use ArrayQueue instead of a linked list for faster random access